# csgoml

./: .gitignore  .pre-commit-config.yaml  DemoAnalyzer_Sorter.py  DemoWatchdog.py  DownloadDemos.py  Inferno_TopMid_Fight_Analyzer.py  LICENSE  README.md  ReadTensorflowInput.py  Tensorflow_Input_Preparation.py  Tensorflow_Input_Preperation.py  _typos.toml  db_testing.py  demo_analyzer_sorter.py  demo_watchdog.py  download_demos.py  fight_analyzer.py  nav_utils.py  plotting_testing.py  plotting_utils.py  pyproject.toml  read_tensorflow_input.py  requirements.txt  setup.cfg  setup.py  tensorflow_input_preparation.py  trajectory_clusterer.py  trajectory_handler.py  trajectory_predictor.py
.github/workflows/: build.yaml
AWS_Steps/FightAnalyzer/: index.html  myscript.js  mystyle.css
AWS_Steps/FightAnalyzer/lambda/: lambda_function.py
AWS_Steps/FightAnalyzer/lambda/Lambda_Tests/: inferno_fight.json
auxiliary/: __init__.py  db_testing.py  demo_watchdog.py  read_tensorflow_input.py
auxiliary/AWS_Steps/FightAnalyzer/: index.html  mystyle.css
auxiliary/AWS_Steps/FightAnalyzer/lambda/: __init__.py  lambda_function.py
auxiliary/AWS_Steps/FightAnalyzer/lambda/Lambda_Tests/: empty_mirage.json  inferno_fight.json
csgoml/: __init__.py  helpers.py  types.py
csgoml/analysis/: __init__.py  fight_analyzer.py
csgoml/preparation/: __init__.py  demo_analyzer_sorter.py
csgoml/scripts/: __init__.py  demo_watchdog.py  download_demos.py  read_tensorflow_input.py  trajectory_input_preparation.py
csgoml/trajectories/: __init__.py  trajectory_clusterer.py  trajectory_handler.py  trajectory_predictor.py
csgoml/utils/: __init__.py  nav_utils.py  plotting_utils.py
tests/: __init__.py  requirements.txt  test_data.json  test_demo_analyzer_sorter.py  test_download_demos.py  test_fight_analyzer.py  test_jsons.json  test_nav_utils.py  test_plotting_utils.py  test_trajectory_clusterer.py  test_trajectory_handler.py  test_trajectory_input_preparation.py  test_trajectory_json.json
